--- a/28072023/index.html
+++ b/28072023/index.html
@@ -52,7 +52,7 @@
         <!-- href determina o redirecionamento da página -->
 
         <li><a href="#"> Início </a></li>
-        <li><a href="sobremim.html"> Sobre mim </a></li>
+        <li><a href="#sobremim"> Sobre mim </a></li>
         <li><a href="#servicos"> Soluções em TI </a></li>
         <li><a href="contato.html"> Contato </a></li>
 
@@ -60,11 +60,12 @@
       </ul>
 
     </nav>
-
+    <!-- Fim do menu -->
 
     <!--tag hr: cria uma linha-->
     <!-- <hr> -->
 
+    <!-- Início da seção de apresentação -->
     <!-- divisão em parte menor, dentro de uma seção , idnetificada pela palavra "apresentação" -->
     <div class="apresentacao">
 
@@ -85,21 +86,102 @@
         <div>
           <button class="btn btnContact"> Entre em contato </button>
         </div>
+      </div>
+    </div>
 
+    <!-- Fim da seção de apresentação -->
+  </header>
 
+  <section id="sobremim">
+    <h3>Sobre mim</h3>
+
+    <div class="containerSobreMim">
+
+      <div class="left">
+        <h2> Lavínia Fernandes  </h2>
+        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime enim minus illo distinctio beatae eum
+          possimus a mollitia consectetur sit quam at tempora obcaecati qui itaque, nisi, laboriosam maiores quos!</p>
       </div>
 
 
 
+
+      <div class="right">
+        <!--  <iframe width="560" height="315" src="https://www.youtube.com/embed/pA6OflrhYsw?si=QkdZ2ByYRcxt8suH" 
+      title="YouTube video player" frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+
+        <!--   <video controls autoplay width="540" heigth="315">
+          <source src="img/video.mp4" type="video/mp4">
+        </video> -->
+  
+        <div class="socialMedia"> 
+
+            <div> 
+            <a href="https://api.whatsapp.com/send?phone=5511956408174&text=sim" target="_blank">
+            <img src="img/redesSociais/whatsapp.png"> 
+            </div>
+
+            <div> 
+            <p>(11) 95640-8174</p>
+            </div> 
+            </a>
+
+        </div>
+
+
+         <div class="socialMedia"> 
+
+            <div>
+            <a href="https://github.com/lavfnx" target="_blank">
+            <img src="img/redesSociais/github.png">
+            </div>
+
+            <div>
+            <p> github.com/lavfnx </p>
+            </div>
+            </a>
+
+         </div>
+
+
+        <div class="socialMedia"> 
+
+           <div>
+           <a href="https://linkedin.com/in/lavfnx" target="_blank">
+           <img src="img/redesSociais/linkedin.png">
+           </div>
+
+            <div>
+            <p>linkedin.com/in/lavfnx</p>
+            </div>
+            </a>
+
+        </div>
+
+
+          <div class="socialMedia">
+
+          <div>
+          <a href="mailto:laviniafernandess27@xconexaodev.com">
+          <img src="img/redesSociais/gmail.png">
+          </div>
+
+          <div>
+          <p> laviniafernandess27@gmail.com </p>
+          </div>
+          </a>
+
+         </div>
+
+      </div>
+
     </div>
-
-  </header>
-
-
-
+  </section>
 
   <section id="servicos">
 
+    <!-- Início da seção de serviços em redes de computadores -->
     <h3> DESENVOLVIMENTO E IMPLEMENTAÇÃO DE APLICATIVOS </h3>
 
     <div class="containerServicos">
@@ -129,8 +211,8 @@
 
       </div>
 
-
     </div>
+    <!-- Fim da seção de serviços em redes de computadores -->
 
   </section>
 
@@ -143,6 +225,7 @@
   <!-- tag p: representar o parágrafo -->
 
 
+  <!-- Início do rodapé -->
   <!-- tag footer: seção para identificar o rodapé-->
   <footer>
 
@@ -150,6 +233,7 @@
 
 
   </footer>
+  <!-- Fim do rodapé -->
 
 </body>
 
