--- a/28072023/index.html
+++ b/28072023/index.html
@@ -16,14 +16,16 @@
   <!-- metadado que possibilita a visualização em navegador de dispositivo móvel, mantendo a escala -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- referência o arquivo CSS -->
-  <link rel="stylesheet" href="style/style.css">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Cabin:ital,wght@1,500&family=Playfair+Display:ital,wght@0,600;1,400&family=Qwitcher+Grypen&family=Roboto+Condensed&family=Rubik:wght@300&display=swap"
-    rel="stylesheet">
+
 
   <!-- tag title: título da guia-->
   <title>soluções em TI</title>
+
+  <!-- Inclusão do bootstrap CSS-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- referência o arquivo CSS -->
+  <link rel="stylesheet" href="style/style.css">
 
 </head>
 
@@ -37,34 +39,41 @@
   </style>
 
   <!--cabeçalho da página-->
+
+
+  <!--tag nav: cria uma seção de menu (navgation)-->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse navColor" id="navbarNav">
+        <ul class="navbar-nav" id="menu">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Início</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#sobremim">Sobre mim</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#servicos">Soluções em TI</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contato">Contato</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- Fim do menu -->
+
+  <!--tag hr: cria uma linha-->
+  <!-- <hr> -->
+
+
   <header>
-
-    <!--tag nav: cria uma sessão de menu (navgation)-->
-    <nav>
-
-      <!--tag ul: cria uma lista desordenada, enquanto tag ol cria uma lista ordenada-->
-      <ul id="menu">
-
-        <!--tag li: determina cada item-->
-
-        <!-- possibilita que o texto seja clicável -->
-
-        <!-- href determina o redirecionamento da página -->
-
-        <li><a href="#"> Início </a></li>
-        <li><a href="#sobremim"> Sobre mim </a></li>
-        <li><a href="#servicos"> Soluções em TI </a></li>
-        <li><a href="contato.html"> Contato </a></li>
-
-
-      </ul>
-
-    </nav>
-    <!-- Fim do menu -->
-
-    <!--tag hr: cria uma linha-->
-    <!-- <hr> -->
-
     <!-- Início da seção de apresentação -->
     <!-- divisão em parte menor, dentro de uma seção , idnetificada pela palavra "apresentação" -->
     <div class="apresentacao">
@@ -84,7 +93,9 @@
         <h1>Desenvolvimento web</h1>
 
         <div>
-          <button class="btn btnContact"> Entre em contato </button>
+          <a href="#contato">
+            <button class="btn btnContact"> Entre em contato </button>
+          </a>
         </div>
       </div>
     </div>
@@ -92,13 +103,14 @@
     <!-- Fim da seção de apresentação -->
   </header>
 
+  <!-- início da seção sobremim -->
   <section id="sobremim">
     <h3>Sobre mim</h3>
 
     <div class="containerSobreMim">
 
       <div class="left">
-        <h2> Lavínia Fernandes  </h2>
+        <h2> Lavínia Fernandes </h2>
         <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime enim minus illo distinctio beatae eum
           possimus a mollitia consectetur sit quam at tempora obcaecati qui itaque, nisi, laboriosam maiores quos!</p>
       </div>
@@ -114,70 +126,71 @@
         <!--   <video controls autoplay width="540" heigth="315">
           <source src="img/video.mp4" type="video/mp4">
         </video> -->
-  
-        <div class="socialMedia"> 
 
-            <div> 
-            <a href="https://api.whatsapp.com/send?phone=5511956408174&text=sim" target="_blank">
-            <img src="img/redesSociais/whatsapp.png"> 
-            </div>
-
-            <div> 
-            <p>(11) 95640-8174</p>
-            </div> 
-            </a>
-
-        </div>
-
-
-         <div class="socialMedia"> 
-
-            <div>
-            <a href="https://github.com/lavfnx" target="_blank">
-            <img src="img/redesSociais/github.png">
-            </div>
-
-            <div>
-            <p> github.com/lavfnx </p>
-            </div>
-            </a>
-
-         </div>
-
-
-        <div class="socialMedia"> 
-
-           <div>
-           <a href="https://linkedin.com/in/lavfnx" target="_blank">
-           <img src="img/redesSociais/linkedin.png">
-           </div>
-
-            <div>
-            <p>linkedin.com/in/lavfnx</p>
-            </div>
-            </a>
-
-        </div>
-
-
-          <div class="socialMedia">
+        <div class="socialMedia">
 
           <div>
-          <a href="mailto:laviniafernandess27@xconexaodev.com">
-          <img src="img/redesSociais/gmail.png">
+            <a href="https://api.whatsapp.com/send?phone=5511956408174&text=sim" target="_blank">
+              <img src="img/redesSociais/whatsapp.png">
           </div>
 
           <div>
-          <p> laviniafernandess27@gmail.com </p>
+            <p>(11) 95640-8174</p>
           </div>
           </a>
 
-         </div>
+        </div>
+
+
+        <div class="socialMedia">
+
+          <div>
+            <a href="https://github.com/lavfnx" target="_blank">
+              <img src="img/redesSociais/github.png">
+          </div>
+
+          <div>
+            <p> github.com/lavfnx </p>
+          </div>
+          </a>
+
+        </div>
+
+
+        <div class="socialMedia">
+
+          <div>
+            <a href="https://linkedin.com/in/lavfnx" target="_blank">
+              <img src="img/redesSociais/linkedin.png">
+          </div>
+
+          <div>
+            <p>linkedin.com/in/lavfnx</p>
+          </div>
+          </a>
+
+        </div>
+
+
+        <div class="socialMedia">
+
+          <div>
+            <a href="mailto:laviniafernandess27@xconexaodev.com">
+              <img src="img/redesSociais/gmail.png">
+          </div>
+
+          <div>
+            <p> laviniafernandess27@gmail.com </p>
+          </div>
+          </a>
+
+        </div>
 
       </div>
 
     </div>
   </section>
+  <!-- Fim da seção sobremim -->
 
   <section id="servicos">
 
@@ -188,35 +201,93 @@
 
       <div class="itemServico1">
         <img src="img/prototipacao/96px.png">
-        <h2>Prototipação de </h2>
-        <h2>aplicações</h2>
+        <h2>Prototipação</h2>
+        <h2>de aplicações</h2>
 
       </div>
 
       <div class="itemServico2">
         <img src="img/bancoDeDados/96px.png">
-        <h2>Estruturação e administração de banco de dados</h2>
+        <h2>Estruturação e administração</h2>
+        <h2>de banco de dados</h2>
 
       </div>
 
       <div class="itemServico3">
         <img src="img/sistemaDesktop/96px.png">
-        <h2>Desenvolvimento de sistema desktop</h2>
+        <h2>Desenvolvimento de</h2>
+        <h2>sistema desktop</h2>
 
       </div>
 
       <div class="itemServico4">
         <img src="img/desenvolverSite/96px.png">
-        <h2>Desevolvimento e hospedagem de sites</h2>
+        <h2>Desevolvimento e</h2>
+        <h2>hospedagem de sites</h2>
 
       </div>
 
     </div>
-    <!-- Fim da seção de serviços em redes de computadores -->
+
+  </section>
+  <!-- Fim da seção de serviços em redes de computadores -->
+
+
+  <!-- Início da seção contato -->
+  <section id="contato">
+
+    <div class="containerContato">
+
+      <form name="formularioContato">
+        <h2> Entre em contato </h2>
+
+        <div class="displayContato">
+
+          <div class="dados">
+            <!-- tag label: rótulo do input -->
+            <label for="nome"> Nome: </label>
+            <!-- tag input: entrada de dados -->
+            <!-- atributo required é um campo obrigatório -->
+            <input type="text" id="idNome" placeholder="Digite o seu nome:" required="required" name="nome" />
+            <br>
+
+            <label for="celular"> Celular: </label>
+            <input type="tel" id="idFone" placeholder="(99) 99999-9999" name="celular" />
+            <br>
+
+            <label for="email"> Email: </label>
+            <input type="email" id="idEmail" placeholder="Digite o seu email:" name="email" />
+            <br>
+          </div>
+
+          <div class="mensagem">
+            <label>Deixe a sua mensagem: </label>
+            <textarea></textarea>
+            <br>
+
+            <!-- tag submit: button usado no form-->
+            <input type="submit" class="enviar" onclick="enviarMensagem();" value="Enviar mensagem" />
+          </div>
+
+          <div class="mapa">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.8065064986695!2d-46.70641572448957!3d-23.647099564748!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce50f8ac76dfdb%3A0xc160a87f059ec93d!2sSenac%20Largo%20Treze!5e0!3m2!1spt-BR!2sbr!4v1695048255674!5m2!1spt-BR!2sbr"
+              width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+
+        </div>
+
+      </form>
+
+    </div>
+
+    <a href="#contato"></a>
 
   </section>
 
 
+  <!-- Fim da seção contato -->
   <!-- <h3> Portifólio | Desenvolvedora Lavínia Fernandes </h3>
 <h4> Portifólio | Desenvolvedora Lavínia Fernandes </h4>
 <h5> Portifólio | Desenvolvedora Lavínia Fernandes </h5>
@@ -231,11 +302,14 @@
 
 
 
-
   </footer>
   <!-- Fim do rodapé -->
 
-</body>
+  <script src="js/script.js"></script>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+</body>
 
 </html>
